--- a/behave.ini
+++ b/behave.ini
@@ -2,8 +2,8 @@
 [behave]
 color = True
 stdout_capture = no
-format = pretty
-outfiles = results.json
+format = allure_behave.formatter:AllureFormatter
+outfiles = allure/result
 [behave.userdata]
 width = 1920
 height = 1080
