--- a/behave.ini
+++ b/behave.ini
@@ -3,7 +3,7 @@
 color = True
 stdout_capture = no
 format = allure_behave.formatter:AllureFormatter
-outfiles = allure/result
+outfiles = allure
 [behave.userdata]
 width = 1920
 height = 1080
