--- a/behave.ini
+++ b/behave.ini
@@ -2,8 +2,25 @@
 [behave]
 color = True
 stdout_capture = no
-format = allure_behave.formatter:AllureFormatter
-outfiles = allure
+format = rerun
+    progress3
+outfiles = rerun.txt
+    reports/report_progress3.txt
+junit = true
+# format = json.pretty
+# outfiles = results.json
+
 [behave.userdata]
+# local, headless, remote
+platform = local
+
+# chrome, firefox
+browser = chrome
+
+# browser windows size
 width = 1920
 height = 1080
+
+[behave.formatters]
+allure = allure_behave.formatter:AllureFormatter
+
